2005-03-22 Nicolas Roard <nicolas@roard.com>

	* cleaning to remove warnings.. (some warnings are inevitable though)

2005-03-22 Nicolas Roard <nicolas@roard.com>

	* correction of a drawing bug in NSScroller

2005-03-22 Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Disabled import warnings and updated to look better/identical 
	compared to other GNUmakefile we use. 

2005-03-17 Nicolas Roard <nicolas@roard.com>

	* renamed the Image class (which poseAs NSImage) in CLImage, to 
	  help reducing conflicts in program. "Image" was obviously too
	  general ;-) -- and Burn.app indeed used an Image class.. 
	  thanks to Rob Burns for the report.

2005-03-16 Nicolas Roard <nicolas@roard.com>

	* addition of NSColor +titlebarTextColor and +selectedTitlebarTextColor
	* modification of NSWindow drawing code
	* tidy up the ChangeLog

2005-03-16 Nicolas Roard <nicolas@roard.com>

	* correction of the text displacement in NSButtonCell.m
	* cleaning of popup drawing in GSDrawFunctions
	* some fixes (added some missing releases)

2005-03-16 Nicolas Roard <nicolas@roard.com>

	* addition of CLVBoxCompositor for creating vertical compositions
	* rewrite of NSSliderCell.m, now the sliders use the compositor 
	  system and works correctly :-)

2005-03-14 Nicolas Roard <nicolas@roard.com>

	* correction of a bug in NSOutlineView introduced by the new code..

2005-03-14 Nicolas Roard <nicolas@roard.com>

	* first modifications in NSBrowser, NSTableView and NSOutlineView 
	  to have alternate colors.. 
	* correction in GSDrawFunctions of a display problem with NSBox
	* addition of test cases in NSBox for the different bezels..
	* small hack in NSButtonCell to have a correct text placement (-1)
	* addition of several methods in NSColor to deal with alternate colors..
	
2005-03-10 Nicolas Roard <nicolas@roard.com>

	* addition of this ChangeLog :-)

2005-03-10 Nicolas Roard <nicolas@roard.com>

	* All hard coded colors are removed. Colors are now determined by 